# tinywm

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  tinywm.c  tinywm.h
src/examples/: CMakeLists.txt  readme.md
src/examples/cursor/: CMakeLists.txt  README.md  main.c
src/examples/direct3d11/: CMakeLists.txt  README.md  main.cpp
src/examples/direct3d11_imgui/: CMakeLists.txt  README.md  main.cpp
src/examples/direct3d12/: CMakeLists.txt  README.md  main.cpp
src/examples/direct3d12_imgui/: CMakeLists.txt  README.md  main.cpp
src/examples/gameloop_peek_events/: CMakeLists.txt  README.md  main.c
src/examples/gameloop_pool_events/: README.md  main.c
src/examples/hello/: README.md  main.c
src/examples/metal/: CMakeLists.txt  README.md  main.cpp
src/examples/metal_imgui/: CMakeLists.txt  README.md  main.cpp
src/examples/opengl4/: CMakeLists.txt  README.md  main.c
src/examples/opengl4_imgui/: CMakeLists.txt  README.md  main.cpp
src/examples/screen_info/: README.md  main.c
src/examples/vulkan1/: CMakeLists.txt  README.md  main.cpp
src/examples/vulkan1_imgui/: CMakeLists.txt  README.md  main.cpp
src/examples/window_info/: CMakeLists.txt  README.md  main.c
